# Asteroids

./: .gitignore  CMakeLists.txt  HowToBuild.md  Report.md
include/: Application.h  ApplicationContext.hpp  ApplicationSettings.hpp  Component.h  GameObject.h
include/Assets/: AssetHandle.h  AssetManager.hpp
include/FileIO/: AudioClip.h  LoadObj.hpp
include/Game/: AsteroidStateFactory.hpp  Asteroids.h  GameState.h  Input.h  Player.hpp  Scene.hpp  State_Game.h  State_MainMenu.h  Time.hpp
include/Game/Components/: MeshRenderer.hpp  ParticleSystemRenderer.h  Transform.hpp
include/Rendering/: HardcodedShaders.hpp  Material.hpp  Mesh.h  OffscreenFBO.hpp  ParticleSystem.h  Quad.hpp  RenderText.hpp  RenderTypes.hpp  Renderer.h  Shader.hpp  Texture.h  Vertex.h
include/Utilities/: Delegate.hpp  Log.hpp  SDL_FrameTimer.hpp
src/: Application.cpp  AssetHandle.cpp  AssetManager.cpp  Asteroids.cpp  Component.cpp  GameObject.cpp  GameState.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  ParticleSystem.cpp  Player.cpp  RenderTypes.cpp  Renderer.cpp  Scene.cpp  State_Game.cpp  State_MainMenu.cpp  Texture.cpp  Transform.cpp  main.cpp
